[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bad-passwords"
dynamic = ["version"]
description = "Provides a single function for checking against commonly used passwords used by various Seantis packages."
readme = "README.rst"
requires-python = ">=3.10"
authors = [
    { name = "David Salvisberg", email = "david.salvisberg@seantis.ch" },
]
maintainers = [
    { name = "David Salvisberg", email = "david.salvisberg@seantis.ch" },
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.optional-dependencies]
dev = [
    "bump-my-version",
    "flake8",
    "flake8-type-checking",
    "flake8-pyproject",
    "mypy",
    "pre-commit",
    "pre-commit-uv",
    "pytest",
    "requests",
    "ruff",
    "tox",
    "tox-uv",
    "types-requests",
    "uv",
]

[project.urls]
Repository = "https://github.com/seantis/bad-passwords"
"Bug Tracker" = "http://github.com/seantis/bad-passwords/issues"
Changelog = "https://github.com/seantis/bad-passwords/blob/main/HISTORY.rst"

[tool.setuptools.package-data]
bad_passwords = ["py.typed", "passwords/*/*/*.txt"]

[tool.setuptools.dynamic]
version = {attr = "bad_passwords.__version__"}

[tool.bandit]
skips = ["B101"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
norecursedirs = [
    "*.egg",
    ".git",
    ".*",
    "_*",
    "passwords"
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "raise AssertionError..unreachable.."
]

[tool.bumpversion]
current_version = "1.0.1"
commit = true
message = "Release {new_version}"
tag = true
tag_message = "Release {new_version}"

[[tool.bumpversion.files]]
filename = "src/bad_passwords/__init__.py"
search= "__version__ = '{current_version}'"
replace= "__version__ = '{new_version}'"

[[tool.bumpversion.files]]
filename = "HISTORY.rst"
search = """
---------
"""
replace = """
---------

{new_version} ({now:%d.%m.%Y})
~~~~~~~~~~~~~~~~~~~
"""

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
exclude = "/passwords/"

[tool.flake8]
select = ["TC0", "TC1"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "passwords",
    "node_modules",
    "site-packages",
    "venv",
]
src = ["src", "tests"]
include = [
    "pyproject.toml",
    "do/**/*.py",
    "src/**/*.py",
    "tests/**/*.py"
]
line-length = 79
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = [
    "B0",
    "B904",
    "B909",
    "C4",
    "COM818",
    "D2",
    "D301",
    "D4",
    "E",
    "F",
    "FLY002",
    "I002",
    "ISC",
    "N",
    "PERF",
    "PGH004",
    "PIE",
    "PT",
    "PYI",
    "Q",
    "RUF",
    "SIM",
    "SLOT",
    "UP",
    "W"
]
ignore = [
    "B007",
    "C420",
    "D200",
    "D201",
    "D202",
    "D204",
    "D205",
    "D209",
    "D210",
    "D211",
    "D400",
    "D401",
    "D412",
    "E226",
    "E402",
    "E711",
    "E712",
    "E741",
    "N818",
    "PYI019",
    "PYI041",
    "RUF012",
    "RUF013",
    "RUF021",
    "RUF022",
    "RUF023",
    "RUF031",
    "RUF052",
    "RUF056",
    "SIM103",
    "SIM105",
    "SIM108",
    "SIM110",
    "SIM118",
    "SIM210",
    "SIM910",
    "UP009",
    "UP012",
    "UP032",
]
unfixable = []
external = ["TC"]
allowed-confusables = ["×"]
preview = true

[tool.ruff.lint.extend-per-file-ignores]
"src/**/*.py" = ["PT"]
"src/bad_passwords/_passwords.py" = ["RUF001"]
"tests/**/*.py" = [
    "C4",
    "D",
    "FLY002",
    "I002",
    "ISC",
    "N",
    "Q",
    "PERF",
    "PGH",
    "PIE",
    "PYI",
    "RUF",
    "SIM",
    "UP",
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.flake8-quotes]
avoid-escape = true
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py310,py311,py312,py313,py314lint,bandit,mypy

[gh-actions]
python =
    3.10: py310
    3.11: py311,lint,bandit,mypy
    3.12: py312
    3.13: py313
    3.14: py314

[testenv]
setenv =
    py{310,311,312,313,314}: COVERAGE_FILE = .coverage.{envname}
deps =
    coverage[toml]
    pytest
    pytest-cov
    pytest-codecov[git]
commands = py.test --cov={envsitepackagesdir}/bad_passwords --cov-report= {posargs}

[testenv:lint]
basepython = python3.11
deps =
    flake8
    flake8-type-checking
    flake8-pyproject
    ruff
commands =
    ruff check
    flake8 src/ tests/

[testenv:mypy]
basepython = python3.11
deps =
    mypy
    pytest
commands =
    mypy -p bad_passwords -p tests --python-version 3.10
    mypy -p bad_passwords -p tests --python-version 3.11
    mypy -p bad_passwords -p tests --python-version 3.12
    mypy -p bad_passwords -p tests --python-version 3.13
    mypy -p bad_passwords -p tests --python-version 3.14

[testenv:bandit]
basepython = python3.11
deps =
    bandit[toml]
commands = bandit -q -c pyproject.toml -r src/

[testenv:report]
deps =
    coverage[toml]
skip_install = true
commands =
    coverage combine
    coverage report -m
"""
