[metadata]
name = bad-passwords
version = attr: bad_passwords.__version__
description = Provides a single function for checking against commonly used passwords used by various Seantis packages.
long_description = file: README.rst, HISTORY.rst
license = MIT
author = Seantis GmbH
author_email = info@seantis.ch
url = http://github.com/seantis/bad-passwords
project_urls =
    Bug Tracker = http://github.com/seantis/bad-passwords/issues
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved
    License :: OSI Approved :: MIT License,
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Programming Language :: Python :: Implementation :: CPython

[options]
include_package_data = True
zip_safe = False
packages =
    bad_passwords
python_requires = >=3.10

[options.extras_require]
dev =
    bump-my-version
    flake8
    flake8-type-checking
    mypy
    pre-commit
    pre-commit-uv
    pytest
    ruff
    tox
    tox-uv
    uv

[options.package_data]
bad_passwords =
    py.typed

[bdist_wheel]
universal=1

[flake8]
select = TC0,TC1
per_file_ignores =
    *.pyi: TC
    tests/**.py: TC
